@@ -1,5 +1,13 @@
 2008-10-08  Christian Persch  <chpe@gnome.org>
 
+        Bug 555313 – GFileAttribute boxed type get_type function should
+        use usual get_type pattern
+
+        * gio/gfileattribute.c (g_file_attribute_info_list_get_type): Use
+        g_once_init_enter/leave.
+
+2008-10-08  Christian Persch  <chpe@gnome.org>
+
         Bug 555314 – mem leak in gmarkup
 
         * glib/gmarkup.c: (g_markup_parse_context_parse): Plug a mem leak.
